[gd_scene load_steps=16 format=2]

[ext_resource path="res://SFX/kashajump.wav" type="AudioStream" id=1]
[ext_resource path="res://sprites/kasha/kasha.png" type="Texture" id=2]
[ext_resource path="res://sprites/kasha/kashaattacksheet.png" type="Texture" id=3]
[ext_resource path="res://sprites/kasha/kashawalksheet.png" type="Texture" id=4]
[ext_resource path="res://sprites/kasha/kashaspritesheet4.png" type="Texture" id=5]
[ext_resource path="res://scripts/Player.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 3, 7.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 4, 6.5 )

[node name="Player" type="KinematicBody2D" groups=["Players"]]
collision_layer = 2
collision_mask = 13
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "Idle"
playing = true

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.5 )
shape = SubResource( 10 )

[node name="Collision" type="Area2D" parent="."]

[node name="CollisionBox2" type="CollisionShape2D" parent="Collision"]
position = Vector2( 0, 2.5 )
shape = SubResource( 10 )

[node name="Hurt" type="Area2D" parent="."]

[node name="Hurtbox" type="CollisionShape2D" parent="Hurt"]
position = Vector2( 0, 3.5 )
shape = SubResource( 11 )

[node name="SFXJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Collision" to="." method="_on_Collision_body_entered"]
[connection signal="body_entered" from="Hurt" to="." method="_on_Hurt_body_entered"]
